jumbotron fix, hide on mobile

--- a/src/assets/scss/components/portfolio.scss
+++ b/src/assets/scss/components/portfolio.scss
@@ -66,11 +66,15 @@ main {
   @include grid-column;
 
   .intro{
-      img{
-        width: 90vw;
-        height: 100%;
-        max-height: 100%;
-      }
+     img{
+       width: 90vw;
+       height: 100%;
+       max-height: 100%;
+     }
+
+     @include breakpoint(medium down) {
+       display: none;
+     }
   }
 }
 
@@ -83,7 +87,7 @@ main {
 section {
   @include grid-row;
   @include grid-column;
-  margin-top: 2em;
+  margin-top: 1em;
   display: flex;
   flex-wrap: wrap;
     
